# refs-forensic

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  clippy.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: Cargo.toml
core/src/: boot.rs  bytes.rs  checkpoint.rs  container.rs  directory.rs  error.rs  lib.rs  metablock.rs  minstore.rs  superblock.rs
core/tests/: boot.rs  container.rs  descent.rs  directory.rs  minstore.rs
docs/: PRD.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-reader-analyzer-split.md  0002-from-scratch-reverse-engineered-reader.md  0003-crate-naming-refs-collision.md  0004-v3-only-fail-loud-version-gate.md  0005-forbid-unsafe-panic-free-readers.md  0006-low-msrv-dictated-by-crc.md  0007-crc-mismatch-never-auto-fabricated.md  0008-cow-residue-carving.md  0009-findings-as-observations-forensicnomicon.md
forensic/: Cargo.toml
forensic/src/: lib.rs
forensic/tests/: carve.rs  integrity.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: boot.rs  container.rs  directory.rs  fuzz_forensic.rs  metablock.rs  minstore.rs  objecttable.rs  superblock.rs
supply-chain/: config.toml
tests/data/: README.md
